[mirotalksfu] - add timestamp to stats, fix api doc
