# app/api/swagger.yaml
@@ -128,10 +128,16 @@ definitions:
     StatsResponse:
         type: object
         properties:
-            meetings:
-                type: array
-                items:
-                    $ref: '#/definitions/Stats'
+            success:
+                type: boolean
+            timestamp:
+                type: string
+                format: date-time
+                example: "2024-12-21T12:00:00Z"
+            totalRooms:
+                type: integer
+            totalPeers:
+                type: integer
     MeetingsResponse:
         type: object
         properties:
@@ -218,15 +224,6 @@ definitions:
             browser:
                 type: string
 
-    Stats:
-        type: object
-        properties:
-            success:
-                type: boolean
-            totalRooms:
-                type: integer
-            totalUser:
-                type: integer
     Meeting:
         type: object
         properties:
